--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,78 @@
       <meta name="theme-color" content="#000000" />
       <meta name="description" content="Web site created using create-react-app" />
       <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+      <!-- Favicon -->
+      <link
+         rel="apple-touch-icon-precomposed"
+         sizes="57x57"
+         href="./assets/favicomatic/apple-touch-icon-57x57.png"
+      />
+      <link
+         rel="apple-touch-icon-precomposed"
+         sizes="114x114"
+         href="./assets/favicomatic/apple-touch-icon-114x114.png"
+      />
+      <link
+         rel="apple-touch-icon-precomposed"
+         sizes="72x72"
+         href="./assets/favicomatic/apple-touch-icon-72x72.png"
+      />
+      <link
+         rel="apple-touch-icon-precomposed"
+         sizes="144x144"
+         href="./assets/favicomatic/apple-touch-icon-144x144.png"
+      />
+      <link
+         rel="apple-touch-icon-precomposed"
+         sizes="60x60"
+         href="./assets/favicomatic/apple-touch-icon-60x60.png"
+      />
+      <link
+         rel="apple-touch-icon-precomposed"
+         sizes="120x120"
+         href="./assets/favicomatic/apple-touch-icon-120x120.png"
+      />
+      <link
+         rel="apple-touch-icon-precomposed"
+         sizes="76x76"
+         href="./assets/favicomatic/apple-touch-icon-76x76.png"
+      />
+      <link
+         rel="apple-touch-icon-precomposed"
+         sizes="152x152"
+         href="./assets/favicomatic/apple-touch-icon-152x152.png"
+      />
+      <link
+         rel="icon"
+         type="image/png"
+         href="./assets/favicomatic/favicon-196x196.png"
+         sizes="196x196"
+      />
+      <link
+         rel="icon"
+         type="image/png"
+         href="./assets/favicomatic/favicon-96x96.png"
+         sizes="96x96"
+      />
+      <link
+         rel="icon"
+         type="image/png"
+         href="./assets/favicomatic/favicon-32x32.png"
+         sizes="32x32"
+      />
+      <link
+         rel="icon"
+         type="image/png"
+         href="./assets/favicomatic/favicon-16x16.png"
+         sizes="16x16"
+      />
+      <link
+         rel="icon"
+         type="image/png"
+         href="./assets/favicomatic/favicon-128.png"
+         sizes="128x128"
+      />
+
       <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -20,7 +92,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-      <title>React App</title>
+      <title>Butter.DB | Get updates on the movies you want to see!</title>
    </head>
    <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
