--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-      <title>Butter.DB | Get updates on the movies you want to see!</title>
+      <title>Butter.DB</title>
    </head>
    <body>
       <noscript>You need to enable JavaScript to run this app.</noscript>
